--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,8 +8,9 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Noto+Sans:ital,wght@0,400;0,700;1,400&family=Poppins:wght@700&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/png" href="../frontend/src/assets/musiQue-imgs/MusiQuFav.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>musiQue</title>
   </head>
   <body>
     <div id="root"></div>
